# vnpy_ctp

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  copy-wrap.py  meson.build  meson_post_install.py  pyproject.toml  run.py  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
script/: run.py
test/: run_test.bat  test_md.py  test_td.py
vnpy_ctp/: __init__.py
vnpy_ctp/api/: __init__.py  ctp_constant.py  meson.build  typed_ctp_constant.py  vnctpmd.cp310-win_amd64.pyd  vnctpmd.pyd  vnctptd.cp310-win_amd64.pyd  vnctptd.pyd
vnpy_ctp/api/generator/: ctp_constant.py  ctp_md_source_function.cpp  ctp_md_source_process.cpp  ctp_struct.py  ctp_td_header_define.h  ctp_td_header_function.h  ctp_td_header_on.h  ctp_td_header_process.h  ctp_td_source_function.cpp  ctp_td_source_module.cpp  ctp_td_source_on.cpp  ctp_td_source_process.cpp  ctp_td_source_switch.cpp  ctp_td_source_task.cpp  ctp_typedef.py  generate_api_functions.py  generate_data_type.py  generate_struct.py
vnpy_ctp/api/include/ctp/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
vnpy_ctp/api/include/mac/ctp/: ThostFtdcUserApiStruct.h
vnpy_ctp/api/libs/: thostmduserapi_se.lib  thosttraderapi_se.lib
vnpy_ctp/api/libs/thosttraderapi_se.framework/Versions/A/Headers/: ThostFtdcTraderApi.h
vnpy_ctp/api/libs/thosttraderapi_se.framework/Versions/A/_CodeSignature/: CodeResources
vnpy_ctp/api/thostmduserapi_se.framework/: thostmduserapi_se
vnpy_ctp/api/thostmduserapi_se.framework/Versions/A/Resources/: Info.plist
vnpy_ctp/api/thostmduserapi_se.framework/Versions/A/_CodeSignature/: CodeResources
vnpy_ctp/api/thosttraderapi_se.framework/: thosttraderapi_se
vnpy_ctp/api/thosttraderapi_se.framework/Versions/A/Headers/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
vnpy_ctp/api/thosttraderapi_se.framework/Versions/A/Resources/: Info.plist
vnpy_ctp/api/vnctp/: vnctp.h
vnpy_ctp/api/vnctp/vnctpmd/: vnctpmd.cpp  vnctpmd.h  vnctpmd.vcxproj
vnpy_ctp/api/vnctp/vnctpmd/x64/Release/vnctpmd.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vnctpmd.write.1u.tlog
vnpy_ctp/api/vnctp/vnctptd/: vnctptd.cpp  vnctptd.h  vnctptd.vcxproj  vnctptd.vcxproj.filters
vnpy_ctp/api/vnctp/vnctptd/x64/Release/vnctptd.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vnctptd.write.1u.tlog
vnpy_ctp/gateway/: __init__.py  ctp_gateway.py
