[build-system]
# 构建系统的最低依赖
requires = [
    "meson-python>=0.13.1",
    "meson>=1.2.1",
    "pybind11>=2.10.0",
]
# 使用meson-python作为构建后端
build-backend = "mesonpy"

[project]
# 项目基本信息
name = "vnpy_ctp"
version = "6.7.2.1"
description = "CTP gateway for vn.py quant trading framework."
readme = "README.md"
authors = [
    {name = "Xiaoyou Chen", email = "xiaoyou.chen@mail.vnpy.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
# 项目依赖
dependencies = [
    "importlib_metadata",
    "pybind11>=2.9.0",
]
# 项目分类
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
]

[project.urls]
homepage = "https://www.vnpy.com"
repository = "https://github.com/vnpy/vnpy_ctp"
documentation = "https://www.vnpy.com/docs/cn/gateway.html#ctp"
changelog = "https://github.com/vnpy/vnpy_ctp/blob/master/CHANGELOG.md"

# 定义构建参数
[tool.mesonpy]
args = ['--vsenv']  # 用于Windows构建

# 包含所有必要的文件类型
[tool.mesonpy.distribution]
include = [
    "**/*.dll",
    "**/*.so",
    "**/*.pyd",
    "**/*.h",
    "**/*.cpp",
    "**/*.lib",
    "**/*.a"
]
# 确保所有包含的文件被正确安装
preserve-path = true 